Renamed icons and updated nav css for smooth operation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,14 @@
 <footer>
 	<div class="footer-data">
 		<nav class="footer-nav">
-			<a href="{{site.baseurl}}/about/">about</a>
-			<a href="{{site.baseurl}}/">Contact</a>
-			<a href="{{site.baseurl}}/">Press</a>
-			<a href="{{site.baseurl}}/">Career</a>
-			<a href="{{site.baseurl}}/">Privacy Policy</a>
-			<a href="{{site.baseurl}}/">Terms and Conditions</a>	
+			<a href="{{ site.facebook }}">Cymour on Facebook</a>
+			<a href="{{site.twitter}}">Cymour on Twitter</a>
+			<a href="{{site.instagram}}">Cymour on Instagram</a>
+			<a href="{{site.strava}}">Cymour on Strava</a>
 		</nav>
+		<!-- 
 		<address>Kalyani Nagar, Pune, Maharashtra 411001.
-		</address>
+		</address> -->
 		<h3 class="design">Website by Bhingry</h3>
 	</div>
 </footer>
