--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,7 +10,7 @@ $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #FDBC11;
 
-$header-background-color: #555;
+$aside-background-color: rgba(10,10,10,0.5);
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
