--- a/css/main.scss
+++ b/css/main.scss
@@ -8,12 +8,12 @@
 @import "layout";
 @import "typography";
 
-@import "header";
+@import "aside";
 @import "offscreen_nav";
 @import "footer";
 
 
 @import "home";
-@import "cover_slider";
-@import "team";
-@import "products";
+// @import "cover_slider";
+// @import "team";
+// @import "products";
