--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,7 +7,7 @@ $base-line-height: 1.5;
 $spacing-unit:     2em;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
+$background-color: #222;
 $brand-color:      #FDBC11;
 
 $aside-background-color: rgba(10,10,10,0.5);
