--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,8 +6,8 @@ $base-line-height: 1.5;
 
 $spacing-unit:     2em;
 
-$text-color:       #111;
-$background-color: #222;
+$text-color:       #eee;
+$background-color: #111;
 $brand-color:      #FDBC11;
 
 $aside-background-color: rgba(10,10,10,0.5);
