Cleaned footer. Added social media links (no icons yet)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
 	<div class="footer-data">
-		<nav class="footer-nav">
+		<nav class="social-nav">
 			<a href="{{ site.facebook }}">Cymour on Facebook</a>
 			<a href="{{site.twitter}}">Cymour on Twitter</a>
 			<a href="{{site.instagram}}">Cymour on Instagram</a>
@@ -9,7 +9,7 @@
 		<!-- 
 		<address>Kalyani Nagar, Pune, Maharashtra 411001.
 		</address> -->
-		<h3 class="design">Website by Bhingry</h3>
+		<!-- <h3 class="design">Website by Bhingry</h3> -->
 	</div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
