--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -8,6 +8,7 @@ $spacing-unit:     2em;
 
 $text-color:       #eee;
 $background-color: #111;
+$background-image: url(../img/home/home_bg.jpg) no-repeat 90% 30%;
 $brand-color:      #FDBC11;
 
 $aside-background-color: rgba(10,10,10,0.5);
