--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,15 +1,18 @@
 <footer>
 	<div class="footer-data">
 		<nav class="social-nav">
-			<a href="{{ site.facebook }}">Cymour on Facebook</a>
-			<a href="{{site.twitter}}">Cymour on Twitter</a>
-			<a href="{{site.instagram}}">Cymour on Instagram</a>
-			<a href="{{site.strava}}">Cymour on Strava</a>
+			<a href="{{ site.facebook }}" class="fb">Cymour on Facebook</a>
+			<a href="{{site.twitter}}" class="tweet">Cymour on Twitter</a>
+			<a href="{{site.instagram}}" class="insta">Cymour on Instagram</a>
+			<a href="{{site.strava}}" class="strava">Cymour on Strava</a>
 		</nav>
 		<!-- 
 		<address>Kalyani Nagar, Pune, Maharashtra 411001.
 		</address> -->
 		<!-- <h3 class="design">Website by Bhingry</h3> -->
+		<div class="callnow">
+			<p>{{site.phone}}</p>
+		</div>
 	</div>
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
