--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,11 @@
 	<!-- our own stylesheet goes here -->
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+	{% if page.bgimage%}
+		<style>
+			body {
+				background: url({{site.url}}{{site.baseurl}}/img/{{page.bgimage}};
+			}
+		</style>
+	{% endif %}
 </head>
