--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,41 +1,91 @@
 footer {
 	// width: 100%;
-	margin-top: $spacing-unit;
 	display: block;
 	clear: both;
 	padding:0;
 	overflow: hidden;
 	position: fixed;
-	bottom: 2em;
 	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 4em;
+	margin-top: 2em;
+	background-color: transparent; 
 }
 
 .footer-data {
-	width: 100%;
-	min-height: 3em;
-	background-color: transparent;	
-	text-transform: Capitalize;
-	font-size: 1em;
-	color: #ccc;
-	padding-top: 1em;
-	overflow: hidden;
+	margin-right: 12em; 
 	position: relative;
+	// border: 1px solid red; 
+	height: 100px;
 }
 
 .social-nav {
-		> a {
+
+	display: block;
+	float: left;
+	margin-left: 2em;
+	
+		a {
 		display: inline-block;
 		float: left; 
-		padding-right: 1em;
 		text-decoration: none;
+		text-indent: -99999px; 
+		background: url(../img/social-icons.svg) no-repeat;
+		@include size(2em);
+	// border: 1px solid blue; 	
+		background-size: auto 100%;
+		margin-right: 2em;
 	}
-
+	
+	.fb {
+		background-position: 0 0; 
+	}
+	.tweet {
+		background-position: 50% 0; 
+	}
+	.insta {
+		background-position: 100% 0;	
+	}
+	.strava {
+		display: none;
+	}
 }
-.design {
-	// border: 1px solid red; 
-	//float: right;
-	color: white;
+
+// .design {
+
+// 	//float: right;
+// 	color: white;
+// 	position: absolute;
+// 	top: 1em;
+// 	right: 1em;
+// }
+
+
+.callnow {
+	margin: 0; 
+	// border: 1px dotted yellow;
+	text-align: center;
 	position: absolute;
-	top: 1em;
-	right: 1em;
+	top: 0;
+	left: 50%;
+	
+	-webkit-transform: translateX(-50%);
+	 -moz-transform: translateX(-50%);
+	 -ms-transform: translateX(-50%);
+	 -o-transform: translateX(-50%);
+	 transform: translateX(-50%); 
+	p {
+		vertical-align: center;
+		display: inline-block;
+		font-weight: bold; 
+		font-size: 2em;
+		color: rgba(255,207,0,0.9);
+		padding-left: 2em;
+		background: url(../img/phone-icon.svg) no-repeat 0 0;
+		-webkit-background-size: contain ;
+		-o-background-size: contain ;
+		background-size: contain ;
+	  	// border: 1px solid green;
+	}
 }
