Removed underline from links in footer.

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -76,6 +76,7 @@ footer {
 	 -o-transform: translateX(-50%);
 	 transform: translateX(-50%); 
 	p {
+		text-decoration: none;
 		vertical-align: center;
 		display: inline-block;
 		font-weight: bold; 
