--- a/_sass/_rentals.scss
+++ b/_sass/_rentals.scss
@@ -1,80 +1,56 @@
-// body {
-// 	background: url(../img/rentals/rentals_bg.jpg) no-repeat 100% 0;
-// 	background-size: 100%;
-// }
 
 .rentals {
 	padding-left: 5%;
 }
+
 #rentals-map {
-	margin: 1em 13em 1em 1em;
+	width: 40rem;
 	height: 70vh;
-	width: 50%;
 	/*margin: 0 auto;*/
-	opacity: 0.8;  
-	background: #FFCF00;
-	-webkit-border-radius: 10em; 
-	 	border-radius: 1em;  	
 }
 
-.gm-style-iw {
-	min-width: 480px !important;
-	/*top: 0 !important;
-	left: 0 !important;*/
-	width: 100% !important;
+.infoBox {
+	padding: 0;
+	margin: 0;
 }
 
-.gm-style-cc {
-	opacity: 0.5;
-}
-.gm-style > div:nth-child(2) {
-	background: #333;
-	 
-	// opacity: 0.8;
-}
 .availability {
-	font-family: 'Josefin Sans', Sans-serif;
-	width: 100% !important;
-	padding: 0 !important;
-	margin: 0 !important;
-	// background-color: #0088ff;
-	background-color: #fefefe;      
+	font-family: 'PT Sans', Sans-serif;
+	width: 20rem;
+	padding: 0 0 0 0;
+	margin: 0;
+	background-color: #fff;
+	// opacity: 0.9;      
+	/*border: 1px solid blue;*/
 	color: #333;
 }
 
 
 .availability h2 {
-	background: #333;
+	background: #555;
 	color: #fff;
 	text-align: center;
-	padding: 0.25em 0;
-}
-
-.availability span {
-	float: left;
-	font-weight: bold;
-	// border: 1px solid red;
+	padding: 0 0 0.25em 0.125em;
+	margin: 0;
 	
-}	
+}
 
 .availability p {
-	float: right;
 	font-weight: bold;
-	// border: 1px solid blue;
-} 
-.availability table {
-	clear: both;
-	display: block;
-}
-.availability td {
-	text-align: right;
-	background: #FFFC00;
-	color: #000;
-}
-
-.availability td, .availability th {
-	min-width: 16px !important;
 	text-transform: uppercase;
-	/*font-size: 1.125em;*/
-	margin-right: 1em !important;
-}	
+	
+} 
+
+.week {
+		display: flex;
+		-webkit-justify-content: space-around;
+		        justify-content: space-around;
+		/*border: 1px solid red;*/
+}
+.day > p {
+	text-align: right;
+}
+.day > h4 {
+	text-transform: uppercase;
+	text-align: center;
+}
