--- a/_includes/rentals_map.html
+++ b/_includes/rentals_map.html
@@ -1,2 +1,4 @@
 <script src="http://maps.google.com/maps/api/js?v=3.20&amp;sensor=false"></script>
-<script src="{{ "/js/map.js" | prepend: site.baseurl }}" ></script>
+<script type="text/javascript" src="http://google-maps-utility-library-v3.googlecode.com/svn/trunk/infobox/src/infobox.js"></script>
+<script src="https://cdn.jsdelivr.net/bluebird/3.0.5/bluebird.js"></script>
+<script src="{{ "/js/map-promise.js" | prepend: site.baseurl }}" ></script>
