added servicing sass to main css file

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@
 
 @import "home";
 @import "rentals";
+@import "servicing"
 // @import "cover_slider";
 // @import "team";
 // @import "products";
