added events css to main and added semicolon

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,8 @@
 
 @import "home";
 @import "rentals";
-@import "servicing"
+@import "servicing";
+@import "events";
 // @import "cover_slider";
 // @import "team";
 // @import "products";
