added target = _blank

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
 <footer>
 	<div class="footer-data">
 		<nav class="social-nav">
-			<a href="{{ site.facebook }}" class="fb">Cymour on Facebook</a>
-			<a href="{{site.twitter}}" class="tweet">Cymour on Twitter</a>
-			<a href="{{site.instagram}}" class="insta">Cymour on Instagram</a>
-			<a href="{{site.strava}}" class="strava">Cymour on Strava</a>
+			<a href="{{ site.facebook }}" class="fb" target="_blank">Cymour on Facebook</a>
+			<a href="{{site.twitter}}" class="tweet" target="_blank">Cymour on Twitter</a>
+			<a href="{{site.instagram}}" class="insta" target="_blank">Cymour on Instagram</a>
+			<a href="{{site.strava}}" class="strava" target="_blank">Cymour on Strava</a>
 		</nav>
 		<!-- 
 		<address>Kalyani Nagar, Pune, Maharashtra 411001.
 		</address> -->
 		<!-- <h3 class="design">Website by Bhingry</h3> -->
 		<div class="callnow">
-			<p>{{site.phone}}</p>
+			<p><a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 		</div>
 	</div>
 </footer>
