shifted imgbox to global settings

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,3 +51,9 @@ h1, h2, h3, h4, h5, h6 {
         clear: both;
     }
 }
+.imgbox {
+        margin: 0 6em 1em 6em;
+        box-shadow: 1em 1em 1em rgba(0,0,0,0.7);
+        /*border: 1px solid red;*/
+        clear: both;
+    }
