added contact and ride scss to main css

--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,8 @@
 @import "rentals";
 @import "servicing";
 @import "events";
+@import "contact";
+@import "rides";
 // @import "cover_slider";
 // @import "team";
 // @import "products";
