added h1, h2 colour formatting to match rest of the site

--- a/_sass/_servicing.scss
+++ b/_sass/_servicing.scss
@@ -5,16 +5,11 @@
 	position: relative;
 	overflow: hidden;
 	padding-bottom: 6em;
-	/*h1 {
-		
-		letter-spacing: 0.125em;
-	}
-
-	p {
+	
+	h1, h2 {
+		color: $brand-color;
 		text-align: center;
-		font-size: 1.25em;
 	}
-*/
 	
 	.banner {
 		text-align: center;
