--- a/_sass/_rentals.scss
+++ b/_sass/_rentals.scss
@@ -6,6 +6,8 @@
 	/*border: 1px solid blue;*/
 	position: relative;
 	overflow: hidden;
+	background-color: rgba(0,0,0,0.5);
+	
 	h1, h2 {
 		color: $brand-color;
 		text-align: center;
@@ -19,7 +21,31 @@
 			color: $brand-color;
 		}
 	}
-	background-color: rgba(0,0,0,0.5);
+	
+
+	.bicycleTypes {
+	clear: both;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
+	margin-top: 1em;
+}
+
+.type {
+	padding: 1em;
+	width: 20em;
+	background: rgba(0,0,0,0.5);
+	box-shadow: 1em 1em 1em rgba(0,0,0,0.4);
+	p {
+		padding: 0;
+	}
+	img {
+		margin-bottom: 1em;
+	}
+}
+.note {
+	padding-top: 2em;
+}
 }
 
 #rentals-map {
@@ -83,24 +109,3 @@
 	border: 1px solid red;
 }
 
-.bicycleTypes {
-	clear: both;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: space-around;
-	margin-top: 1em;
-}
-
-.type {
-	padding: 1em;
-	width: 20em;
-	background: rgba(0,0,0,0.5);
-	box-shadow: 1em 1em 1em rgba(0,0,0,0.4);
-	p {
-		padding: 0;
-	}
-	img {
-		margin-bottom: 1em;
-	}
-
-}
