--- a/_sass/_servicing.scss
+++ b/_sass/_servicing.scss
@@ -35,6 +35,7 @@
 		flex-flow: row wrap;
 		justify-content: space-around;
 		/*border: 1px solid red;*/
+		margin-bottom: 3em;
 	}
 
 	.servicetype {
