--- a/_sass/_events.scss
+++ b/_sass/_events.scss
@@ -15,6 +15,9 @@
 		font-size: 1.5em;
 		padding: 0 2em 1em 2em;
 		text-align: center;
+		a {
+			color: $brand-color;
+		}
 	}
 }
 .eventscontainer {
