added tags for sidebar icons

--- a/_sass/_aside.scss
+++ b/_sass/_aside.scss
@@ -68,6 +68,7 @@ aside {
 		width: 100%;
 		// border: 1px solid yellow; 
 		height: 8%;
+		text-align: center;
 		// @include media($tablet) {
 		// 	width: 100%;
 		// 	padding-left: 10%; 
@@ -80,6 +81,7 @@ aside {
 			// border: 1px solid red; 
 			
 		}
+
 	}
 
 	
