--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -13,12 +13,12 @@
 		<nav class="js-menu sliding-panel-content">
 			<ul>
 				<li><a href="{{site.baseurl}}/" class="aside-logo" title="Cymour Cycling Home">Logo</a></li>
-				<li><a href="{{site.baseurl}}/rentals/" class="rentals-icon" title="Rent a Bicycle">Rentals</a></li>
-				<li><a href="{{site.baseurl}}/servicing/" class="servicing-icon" title="Book a Servicing">Servicing</a></li>
-				<li><a href="{{site.baseurl}}/rides/" class="rides-icon" title="Join a Ride">Rides</a></li>
+				<li><a href="{{site.baseurl}}/rentals/" class="rentals-icon" title="Rent a Bicycle">Rentals</a>Retals</li>
+				<li><a href="{{site.baseurl}}/servicing/" class="servicing-icon" title="Book a Servicing">Servicing</a>Servicing</li>
+				<li><a href="{{site.baseurl}}/rides/" class="rides-icon" title="Join a Ride">Rides</a>Rides</li>
 				<!-- <li><a href="{{site.baseurl}}/tours/" class="tours-icon" title="Go on a Cycle Tour">Tours</a></li> -->
-				<li><a href="{{site.baseurl}}/events/" class="events-icon" title="Organize an Event">Events</a></li>
-				<li><a href="{{site.baseurl}}/contact/" class="contact-icon" title="Call us Now">Contact</a></li>					
+				<li><a href="{{site.baseurl}}/events/" class="events-icon" title="Organize an Event">Events</a>Events</li>
+				<li><a href="{{site.baseurl}}/contact/" class="contact-icon" title="Call us Now">Contact</a>Contact</li>					
 			</ul>
 		</nav>
 		<div class="js-menu-screen sliding-panel-fade-screen"></div>
