Changed spelling of Rentals and removed crap

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,19 +1,10 @@
 <aside>
-<!-- 	<div class="social-media-strip">
-		<ul>
-			<li class="behance"><a href="#behance">Behance</a></li>
-			<li class="insta"><a href="#insta">Instagram</a></li>
-			<li class="fb"><a href="#fb">Facebook</a></li>
-			<li><img src="{{site.baseurl}}/img/followus.png"></li>
-		</ul>
-	</div>
-	 -->
 	<div class="top-nav">
 		<button type="button" class="burger js-menu-trigger sliding-panel-button"></button>
 		<nav class="js-menu sliding-panel-content">
 			<ul>
 				<li><a href="{{site.baseurl}}/" class="aside-logo" title="Cymour Cycling Home">Logo</a></li>
-				<li><a href="{{site.baseurl}}/rentals/" class="rentals-icon" title="Rent a Bicycle">Rentals</a>Retals</li>
+				<li><a href="{{site.baseurl}}/rentals/" class="rentals-icon" title="Rent a Bicycle">Rentals</a>Rentals</li>
 				<li><a href="{{site.baseurl}}/servicing/" class="servicing-icon" title="Book a Servicing">Servicing</a>Servicing</li>
 				<li><a href="{{site.baseurl}}/rides/" class="rides-icon" title="Join a Ride">Rides</a>Rides</li>
 				<!-- <li><a href="{{site.baseurl}}/tours/" class="tours-icon" title="Go on a Cycle Tour">Tours</a></li> -->
