--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -5,6 +5,11 @@
 	/*border: 1px solid blue;*/
 	position: relative;
 	overflow: hidden;
+	
+	@include media($tablet) {
+		margin-right: 0;
+	}
+
 	h1, h2 {
 		color: $brand-color;
 		text-align: center;
