Added media query to remove right margin on tablets and below

--- a/_sass/_events.scss
+++ b/_sass/_events.scss
@@ -6,6 +6,11 @@
 	overflow: hidden;
 	margin-top: 3em;
 	padding-bottom: 6em;
+
+	@include media($tablet) {
+		margin-right: 0;
+	}
+	
 	h1, h2 {
 		color: $brand-color;
 		text-align: center;
