--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -25,7 +25,7 @@ footer {
 	display: block;
 	float: left;
 	margin-left: 2em;
-	
+	/*background: rgba(0,0,0,1);*/
 		a {
 		display: inline-block;
 		float: left; 
