--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,6 @@
 <footer>
-	<div class="footer-data">
-		<nav class="social-nav">
-			<a href="{{ site.facebook }}" class="fb" target="_blank">Cymour on Facebook</a>
-			<a href="{{site.twitter}}" class="tweet" target="_blank">Cymour on Twitter</a>
-			<a href="{{site.instagram}}" class="insta" target="_blank">Cymour on Instagram</a>
-			<a href="{{site.strava}}" class="strava" target="_blank">Cymour on Strava</a>
-		</nav>
+	<!-- <div class="footer-data"> -->
+		
 		<!-- 
 		<address>Kalyani Nagar, Pune, Maharashtra 411001.
 		</address> -->
@@ -13,7 +8,13 @@
 		<div class="callnow">
 			<p><a href="tel: {{site.phone}}">{{site.phone}}</a></p>
 		</div>
-	</div>
+		<div class="social-nav">
+			<a href="{{ site.facebook }}" class="fb" target="_blank">Cymour on Facebook</a>
+			<a href="{{site.twitter}}" class="tweet" target="_blank">Cymour on Twitter</a>
+			<a href="{{site.instagram}}" class="insta" target="_blank">Cymour on Instagram</a>
+			<!-- <a href="{{site.strava}}" class="strava" target="_blank">Cymour on Strava</a> -->
+		</div>
+	<!-- </div> -->
 </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script type="text/javascript" src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
