--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,41 +1,116 @@
 footer {
-	// width: 100%;
 	display: block;
 	clear: both;
-	padding:0;
+	padding:1em;
 	overflow: hidden;
 	position: fixed;
 	left: 0;
-	right: 0;
+	right: 12em;
 	bottom: 0;
-	height: 4em;
-	margin-top: 2em;
-	background-color: transparent; 
+	/*min-height: 4em;*/
+	/*margin-top: 2em;*/
+	/*border: 1px solid red;*/
+	/*background-color: transparent; */
+	@include media($tablet) {
+		right: 0;
+	}
 }
-
+/*
 .footer-data {
-	margin-right: 12em; 
+	
 	position: relative;
-	// border: 1px solid red; 
-	height: 100px;
+	border: 1px solid white; 
+	
+	
+
+	@include media($tablet){
+		margin-right: 0;
+	}
+}
+*/
+.callnow {
+	margin: 0.5em;
+	background: rgba(0,0,0,0.5);
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 50%;
+	
+	-webkit-transform: translateX(-50%);
+	 -moz-transform: translateX(-50%);
+	 -ms-transform: translateX(-50%);
+	 -o-transform: translateX(-50%);
+	 transform: translateX(-50%); 
+	
+	@include media($tablet){
+		display: block;
+		float: left;
+		clear:both;
+		margin: 0.25em auto; 
+		/*border: 1px dotted yellow;*/
+		position: relative;
+	}
+
+	p {
+		text-decoration: none;
+		vertical-align: center;
+		/*display: inline-block;*/
+		color: rgba(255,207,0,0.9);
+		
+		background: url(../img/phone-icon.svg) no-repeat 0 0;
+		-webkit-background-size: contain ;
+		-o-background-size: contain ;
+		background-size: contain ;
+	  	/*border: 1px solid green;*/
+	  	padding-left: 2em;
+	}
+
+	a { 
+		min-width: 8em;
+		padding-left: 0.125em;
+		display: block; 
+		font-weight: bold; 
+		font-size: 2em;
+	}
 }
 
 .social-nav {
-
-	display: block;
-	float: left;
+	/*display: block;*/
+	position: relative;
+	/*float: left;*/
 	margin-left: 2em;
-	/*background: rgba(0,0,0,1);*/
-		a {
+	/*overflow: hidden;*/
+	text-align: center;
+
+	@include media($tablet) {
 		display: inline-block;
+		float: left;
+		clear:both;
+		margin: 0.5em auto 0.125em auto; 
+		/*border: 1px dotted yellow;*/
+		position: relative;
+	}
+
+	a {
+		display: block;
 		float: left; 
 		text-decoration: none;
 		text-indent: -99999px; 
 		background: url(../img/social-icons.svg) no-repeat;
-		@include size(2em);
-	// border: 1px solid blue; 	
+		/*@include size(2em);*/
+		/*border: 1px solid blue; 	*/
+		width: 2em;
+		height: 2em;
 		background-size: auto 100%;
 		margin-right: 2em;
+	}
+	a:first-child {
+		clear: left;
+	}
+
+	a:last-child {
+		margin-right: 0;
+		clear: right;
 	}
 	
 	.fb {
@@ -47,46 +122,16 @@ footer {
 	.insta {
 		background-position: 100% 0;	
 	}
-	.strava {
+	/*.strava {
 		display: none;
-	}
+	}*/
 }
 
-// .design {
+/*// .design {
 
 // 	//float: right;
 // 	color: white;
 // 	position: absolute;
 // 	top: 1em;
 // 	right: 1em;
-// }
-
-
-.callnow {
-	margin: 0; 
-	// border: 1px dotted yellow;
-	text-align: center;
-	position: absolute;
-	top: 0;
-	left: 50%;
-	
-	-webkit-transform: translateX(-50%);
-	 -moz-transform: translateX(-50%);
-	 -ms-transform: translateX(-50%);
-	 -o-transform: translateX(-50%);
-	 transform: translateX(-50%); 
-	p {
-		text-decoration: none;
-		vertical-align: center;
-		display: inline-block;
-		font-weight: bold; 
-		font-size: 2em;
-		color: rgba(255,207,0,0.9);
-		padding-left: 2em;
-		background: url(../img/phone-icon.svg) no-repeat 0 0;
-		-webkit-background-size: contain ;
-		-o-background-size: contain ;
-		background-size: contain ;
-	  	// border: 1px solid green;
-	}
-}
+// }*/
