--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,7 +1,7 @@
 footer {
 	display: block;
 	clear: both;
-	padding:1em;
+	padding:1.125em 1em 1em 1em;
 	overflow: hidden;
 	position: fixed;
 	left: 0;
@@ -10,7 +10,7 @@ footer {
 	/*min-height: 4em;*/
 	/*margin-top: 2em;*/
 	/*border: 1px solid red;*/
-	/*background-color: transparent; */
+	background-color: rgba(0,0,0, 0.9); 
 	@include media($tablet) {
 		right: 0;
 	}
